# wind2watts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/dataframes/: fit_with_wind.csv
data/dataframes/strava_export/: 3201353048.csv  3323843441.csv  3326785972.csv  4981752561.csv  4999423380.csv  5014540057.csv  5017288336.csv  5055033034.csv  5067226907.csv  5073586690.csv  5125808132.csv  5131207579.csv  5131392499.csv  5141679328.csv  5168048558.csv  5174554452.csv  5380594551.csv  5423193666.csv  6003235826.csv  6502399913.csv  6846406083.csv  6883092294.csv  6926717847.csv  7014188950.csv  7109314418.csv  7194275497.csv  7216012257.csv  7243007462.csv  7294748332.csv  7299537948.csv  7311119464.csv  7321607695.csv  7332276623.csv  7365933330.csv  7371464462.csv  7371823983.csv  7376237661.csv  7391377465.csv  7392039743.csv  7392289702.csv  (+182 more)
data/fit/: Afternoon_Ride (1).fit  Morning_Ride (1).fit
data/fit/strava_export/: 3201353048.fit  3323843441.fit  3326785972.fit  (+274 more)
data/strava_benchmark/: Afternoon_Ride_no_power.fit  watts_calc.json
notebooks/: SimpleRNN.ipynb  Test.ipynb
notebooks/misc/: AirSpeed.ipynb  Gradient.ipynb  StravaBenchmark.ipynb
notebooks/training/: AirSpeed.ipynb  LatLonWind.ipynb  RelWindAngle.ipynb
scripts/: build_dataset.py
src/: models.py
src/data/: datasets.py  util.py  wind.py
src/fit/: util.py
src/wind/: providers.py  util.py
training_checkpoints/: simplernn_v1p0.pt
wind2watts/: models.py
wind2watts/data/: datasets.py  util.py
wind2watts/fit/: util.py
wind2watts/wind/: providers.py  util.py
(+8 files in other folders)
